--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+    <h1>Flipping Bard</h1>
+    <p>Space to jump</p>
+    <p>Punch monitor to quit</p>
     <div id="game"></div>
 </body>
 </html>
